Minor code cleanup and findbugs fixes
svn path=/trunk/; revision=46627


Former-commit-id: bc0539bd91f805a86f445b416c422a928bff8bcd